Salesforce/main/default/main/default/objects/Planejamento_Difusao_Supervisor__c/Planejamento_Difusao_Supervisor__c.object-meta.xml
<CustomObject>
    <label>Planejamento Difusão Supervisor</label>
    <nameField>
        <label>Nome de Planejamento Supervisor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planejamentos Difusão Supervisor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>