Salesforce/main/default/main/default/objects/Planejamento_Difusao_Supervisor__c/fields/Gerente_Regional__c.field-meta.xml
<CustomField>
    <fullName>Gerente_Regional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente Regional</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planejamentos_Difusao_Supervisor</relationshipName>
    <type>Lookup</type>
</CustomField>