Salesforce/main/default/main/default/objects/Planejamento_Difusao_Supervisor__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planejamentos_Difusao_Supervisor_Sup</relationshipName>
    <type>Lookup</type>
</CustomField>